<resources>
    <string name="app_name">SDPVocabQuiz</string>
    <string name="Add_questions">Add questions</string>
    <string name="addButton">Add more question(up to 10)</string>
    <string name="remove">Remove question</string>
    <string name="addIncorrect">Add Incorrect Definition</string>
    <string name="AddIncorrect">Add Incorrect Definitions</string>
    <string name="addInco">* all field required</string>
    <string name="saveQuiz">Save Quiz</string>
    <string name="addQuiz">Add a Quiz</string>
    <string name="quizName">Quiz Name:</string>
    <string name="description">Description</string>
    <string name="addQuestions">Add Questions</string>
    <string name="add">Add a Quiz</string>
    <string name="removeQuiz">Remove a Quiz</string>
    <string name="practiceQuiz">Practice Quizzes</string>
    <string name="viewScore">View Scores</string>
    <string name="username">Username:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="quizname">Quiz Name</string>
    <string name="word">Word</string>
    <string name="next">Next</string>
    <string name="practice">Practice a Quiz</string>
    <string name="nextpage">Next Page</string>
    <string name="word1">Word 1</string>
    <string name="word2">Word 2</string>
    <string name="word3">Word 3</string>
    <string name="word4">Word 4</string>
    <string name="word5">Word 5</string>
    <string name="word6">Word 6</string>
    <string name="word7">Word 7</string>
    <string name="word8">Word 8</string>
    <string name="word9">Word 9</string>
    <string name="word10">Word 10</string>
    <string name="registration">Registration</string>
    <string name="reg_username">Username</string>
    <string name="reg_realname">Real Name</string>
    <string name="reg_major">Major</string>
    <string name="reg_seniority">Seniority</string>
    <string name="reg_email">Email</string>
    <string name="reg_button">Register</string>
    <string name="stat_first">First score</string>
    <string name="stat_best">Best score</string>
    <string name="stat_100">Students to score 100%</string>
    <string name="title_activity_practice">PracticeActivity</string>
    <string name="title_activity_quiz_stats">QuizStatsActivity</string>
    <string name="title_activity_view_quiz3">ViewQuiz3</string>
    <string name="username_required">Username required</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="real_name_required">Real name required</string>
    <string name="major_required">Major required</string>
    <string name="email_required">Email required</string>
    <string name="invalid_email_address">Invalid email address</string>
</resources>