<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="Add Quiz"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/quiz"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:labelFor="@+id/quiz_name"
        android:text="@string/quizName"
        android:textSize="25dp" />


    <EditText
        android:id="@+id/quiz_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/quiz2"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:labelFor="@+id/description"
        android:text="@string/description"
        android:textSize="25dp"
         />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addQuestion"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:padding="8dp"
        android:text="@string/addQuestions" />
</LinearLayout>